@@ -66,6 +66,7 @@ dillo-fltk2
  - Added HTTP-1.1's chunked transfer support!
  - Made the stop button sensitive when loading an image.
  - Added more statics in dpi, const in pixmaps, and removed redundant includes.
+ - Made cleanups in prefs (hiding local data/defs/symbols).
    Patches: place
 +- Fixed a problem with locally-installed dpis.
  - Added code for optional image loading (nice interface) very advanced!
